// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createCurveShape > both sides of active bin > fallback ratio should work 1`] = `
{
  "224": [
    0n,
    208871409n,
  ],
  "225": [
    0n,
    417742819n,
  ],
  "226": [
    0n,
    626614229n,
  ],
  "227": [
    0n,
    835485639n,
  ],
  "228": [
    0n,
    1044357048n,
  ],
  "229": [
    0n,
    1253228458n,
  ],
  "230": [
    0n,
    1462099868n,
  ],
  "231": [
    0n,
    1670971278n,
  ],
  "232": [
    697347079n,
    2480629248n,
  ],
  "233": [
    2067256204n,
    0n,
  ],
  "234": [
    1808849179n,
    0n,
  ],
  "235": [
    1550442153n,
    0n,
  ],
  "236": [
    1292035127n,
    0n,
  ],
  "237": [
    1033628102n,
    0n,
  ],
  "238": [
    775221076n,
    0n,
  ],
  "239": [
    516814051n,
    0n,
  ],
  "240": [
    258407025n,
    0n,
  ],
}
`;

exports[`createCurveShape > both sides of active bin > return the correct shape #1 1`] = `
{
  "219": [
    0n,
    9527233n,
  ],
  "220": [
    0n,
    19054467n,
  ],
  "221": [
    0n,
    28581701n,
  ],
  "222": [
    0n,
    38108935n,
  ],
  "223": [
    0n,
    47636169n,
  ],
  "224": [
    0n,
    57163403n,
  ],
  "225": [
    0n,
    66690637n,
  ],
  "226": [
    0n,
    76217871n,
  ],
  "227": [
    0n,
    85745105n,
  ],
  "228": [
    0n,
    95272339n,
  ],
  "229": [
    0n,
    104799573n,
  ],
  "230": [
    0n,
    114326807n,
  ],
  "231": [
    0n,
    123854041n,
  ],
  "232": [
    37394666n,
    133021711n,
  ],
  "233": [
    120325666n,
    0n,
  ],
  "234": [
    112303955n,
    0n,
  ],
  "235": [
    104282244n,
    0n,
  ],
  "236": [
    96260533n,
    0n,
  ],
  "237": [
    88238822n,
    0n,
  ],
  "238": [
    80217111n,
    0n,
  ],
  "239": [
    72195400n,
    0n,
  ],
  "240": [
    64173688n,
    0n,
  ],
  "241": [
    56151977n,
    0n,
  ],
  "242": [
    48130266n,
    0n,
  ],
  "243": [
    40108555n,
    0n,
  ],
  "244": [
    32086844n,
    0n,
  ],
  "245": [
    24065133n,
    0n,
  ],
  "246": [
    16043422n,
    0n,
  ],
  "247": [
    8021711n,
    0n,
  ],
}
`;

exports[`createCurveShape > both sides of active bin > return the correct shape #2 1`] = `
{
  "226": [
    0n,
    591263n,
  ],
  "227": [
    0n,
    1182526n,
  ],
  "228": [
    0n,
    1773789n,
  ],
  "229": [
    0n,
    2365052n,
  ],
  "230": [
    0n,
    2956315n,
  ],
  "231": [
    0n,
    3547578n,
  ],
  "232": [
    558743526n,
    1987583477n,
  ],
  "233": [
    1688251294n,
    0n,
  ],
  "234": [
    1500667817n,
    0n,
  ],
  "235": [
    1313084340n,
    0n,
  ],
  "236": [
    1125500863n,
    0n,
  ],
  "237": [
    937917386n,
    0n,
  ],
  "238": [
    750333908n,
    0n,
  ],
  "239": [
    562750431n,
    0n,
  ],
  "240": [
    375166954n,
    0n,
  ],
  "241": [
    187583477n,
    0n,
  ],
}
`;

exports[`createCurveShape > left side of active bin > excluding active bin 1`] = `
{
  "227": [
    0n,
    133333333n,
  ],
  "228": [
    0n,
    266666666n,
  ],
  "229": [
    0n,
    400000000n,
  ],
  "230": [
    0n,
    533333333n,
  ],
  "231": [
    0n,
    666666666n,
  ],
}
`;

exports[`createCurveShape > left side of active bin > ignore tokens from right side 1`] = `
{
  "227": [
    0n,
    133333333n,
  ],
  "228": [
    0n,
    266666666n,
  ],
  "229": [
    0n,
    400000000n,
  ],
  "230": [
    0n,
    533333333n,
  ],
  "231": [
    0n,
    666666666n,
  ],
}
`;

exports[`createCurveShape > left side of active bin > including active bin 1`] = `
{
  "227": [
    0n,
    16666666n,
  ],
  "228": [
    0n,
    33333333n,
  ],
  "229": [
    0n,
    50000000n,
  ],
  "230": [
    0n,
    66666666n,
  ],
  "231": [
    0n,
    83333333n,
  ],
  "232": [
    491954769n,
    1750000000n,
  ],
}
`;

exports[`createCurveShape > right side of active bin > excluding active bin 1`] = `
{
  "233": [
    133333333n,
    0n,
  ],
  "234": [
    123809523n,
    0n,
  ],
  "235": [
    114285714n,
    0n,
  ],
  "236": [
    104761904n,
    0n,
  ],
  "237": [
    95238095n,
    0n,
  ],
  "238": [
    85714285n,
    0n,
  ],
  "239": [
    76190476n,
    0n,
  ],
  "240": [
    66666666n,
    0n,
  ],
  "241": [
    57142857n,
    0n,
  ],
  "242": [
    47619047n,
    0n,
  ],
  "243": [
    38095238n,
    0n,
  ],
  "244": [
    28571428n,
    0n,
  ],
  "245": [
    19047619n,
    0n,
  ],
  "246": [
    9523809n,
    0n,
  ],
}
`;

exports[`createCurveShape > right side of active bin > ignore tokens from left side 1`] = `
{
  "233": [
    133333333n,
    0n,
  ],
  "234": [
    123809523n,
    0n,
  ],
  "235": [
    114285714n,
    0n,
  ],
  "236": [
    104761904n,
    0n,
  ],
  "237": [
    95238095n,
    0n,
  ],
  "238": [
    85714285n,
    0n,
  ],
  "239": [
    76190476n,
    0n,
  ],
  "240": [
    66666666n,
    0n,
  ],
  "241": [
    57142857n,
    0n,
  ],
  "242": [
    47619047n,
    0n,
  ],
  "243": [
    38095238n,
    0n,
  ],
  "244": [
    28571428n,
    0n,
  ],
  "245": [
    19047619n,
    0n,
  ],
  "246": [
    9523809n,
    0n,
  ],
}
`;

exports[`createCurveShape > right side of active bin > including active bin 1`] = `
{
  "232": [
    562234022n,
    2000000000n,
  ],
  "233": [
    58368797n,
    0n,
  ],
  "234": [
    54199597n,
    0n,
  ],
  "235": [
    50030397n,
    0n,
  ],
  "236": [
    45861197n,
    0n,
  ],
  "237": [
    41691997n,
    0n,
  ],
  "238": [
    37522798n,
    0n,
  ],
  "239": [
    33353598n,
    0n,
  ],
  "240": [
    29184398n,
    0n,
  ],
  "241": [
    25015198n,
    0n,
  ],
  "242": [
    20845998n,
    0n,
  ],
  "243": [
    16676799n,
    0n,
  ],
  "244": [
    12507599n,
    0n,
  ],
  "245": [
    8338399n,
    0n,
  ],
  "246": [
    4169199n,
    0n,
  ],
}
`;

exports[`createCurveShape > with fallback ratio > ignore tokens from left side 1`] = `
{
  "455": [
    0n,
    344507976n,
  ],
  "456": [
    0n,
    689015953n,
  ],
  "457": [
    0n,
    1033523929n,
  ],
  "458": [
    0n,
    1378031906n,
  ],
  "459": [
    0n,
    1722539883n,
  ],
  "460": [
    0n,
    2067047859n,
  ],
  "461": [
    0n,
    2411555836n,
  ],
  "462": [
    800129n,
    353776654n,
  ],
  "463": [
    49967n,
    0n,
  ],
  "464": [
    42829n,
    0n,
  ],
  "465": [
    35691n,
    0n,
  ],
  "466": [
    28553n,
    0n,
  ],
  "467": [
    21414n,
    0n,
  ],
  "468": [
    14276n,
    0n,
  ],
  "469": [
    7138n,
    0n,
  ],
}
`;
